--- a/src/app/components/surveys/surveys.component.html
+++ b/src/app/components/surveys/surveys.component.html
@@ -19,30 +19,49 @@
         </div>
       </div>
 
-      <div *ngFor="let roomSurvey of roomSurveySet"  class="row justify-content-center">
-        <div *ngFor="let survey of roomSurvey.surveySet" class="card col-3 m-4" style="width: 18rem;">
+      <div *ngFor="let roomSurvey of roomSurveySet" class="row justify-content-center text-dark">
+        <div *ngFor="let player of roomSurvey.players" class="card col-3 m-4" style="width: 18rem;">
           <div  class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">{{ roomSurvey.room.created | date:'short' }}</h6>
-            <h5 class="card-title text-center">{{ roomSurvey.room.game.name }}: {{ survey.playerTemplate.playerUsername }}</h5>
+            <h5 class="card-title text-center">{{ roomSurvey.room.game.name }}: {{ player.playerUsername }}</h5>
             <hr>
             
             <div class="card-text">
-              <div *ngFor="let skill of survey.skills" class="row">
-                <div class="col-7">{{ skill.skill.name }}</div>
+              <div *ngFor="let skill of roomSurvey.skills">
+                <div *ngIf="skill.parentSkill == null" class="row" id="{{ skill.name | spaceToUnderScore }}" (click)="viewSubSkills(skill.name)">
+                  <div class="col-7">{{ skill.name }}</div>
 
-                <div id="voteStatus" [class]="skill.value == 0 ? 'voted-not-yet' : skill.value > 0 ? 'voted-yes' :  'voted-no'">
-
-                  <button id="upvote" class="btn mr-1 mb-1" [disabled]="skill.clicked" [ngClass]="{ disabled : (skill.value != 0), active : (skill.value == 0) }"
-                  (click)="submitSurvey(roomSurvey.room.roomId, survey.playerTemplate, skill.skill, 1); skill.clicked = true">
-                    <span style="color:green"><fa-icon [icon]="faThumbsUp"></fa-icon></span>
-                  </button>
-
-                  <button id="downvote" class="btn  mb-1" [disabled]="skill.clicked" [ngClass]="{ disabled : (skill.value != 0), active : (skill.value == 0) }" 
-                  (click)="submitSurvey(roomSurvey.room.roomId, survey.playerTemplate, skill.skill, -1); skill.clicked = true">
-                    <span style="color:red"><fa-icon [icon]="faThumbsDown"></fa-icon></span>
-                  </button>
-
+                  <div id="voteStatus" [class]="skill.value == 0 ? 'voted-not-yet' : skill.value > 0 ? 'voted-yes' :  'voted-no'">
+  
+                    <button id="upvote" class="btn mr-1 mb-1" [disabled]="skill.clicked" [ngClass]="{ disabled : (skill.value != 0), active : (skill.value == 0) }"
+                    (click)="submitSurvey(roomSurvey.room.roomId, roomSurvey.playerTemplate, skill.skill, 1); skill.clicked = true">
+                      <span style="color:green"><fa-icon [icon]="faThumbsUp"></fa-icon></span>
+                    </button>
+  
+                    <button id="downvote" class="btn  mb-1" [disabled]="skill.clicked" [ngClass]="{ disabled : (skill.value != 0), active : (skill.value == 0) }" 
+                    (click)="submitSurvey(roomSurvey.room.roomId, roomSurvey.playerTemplate, skill.skill, -1); skill.clicked = true">
+                      <span style="color:red"><fa-icon [icon]="faThumbsDown"></fa-icon></span>
+                    </button>
+                  </div>
                 </div>
+
+                <div *ngIf="skill.parentSkill" class="{{ skill.parentSkill.name | spaceToUnderScore }} row" id="{{ skill.name }}">
+                  <div class="col-7">{{ skill.name }}</div>
+
+                  <div id="voteStatus" [class]="skill.value == 0 ? 'voted-not-yet' : skill.value > 0 ? 'voted-yes' :  'voted-no'">
+  
+                    <button id="upvote" class="btn mr-1 mb-1" [disabled]="skill.clicked" [ngClass]="{ disabled : (skill.value != 0), active : (skill.value == 0) }"
+                    (click)="submitSurvey(roomSurvey.room.roomId, roomSurvey.playerTemplate, skill.skill, 1); skill.clicked = true">
+                      <span style="color:green"><fa-icon [icon]="faThumbsUp"></fa-icon></span>
+                    </button>
+  
+                    <button id="downvote" class="btn  mb-1" [disabled]="skill.clicked" [ngClass]="{ disabled : (skill.value != 0), active : (skill.value == 0) }" 
+                    (click)="submitSurvey(roomSurvey.room.roomId, roomSurvey.playerTemplate, skill.skill, -1); skill.clicked = true">
+                      <span style="color:red"><fa-icon [icon]="faThumbsDown"></fa-icon></span>
+                    </button>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
