fixed css for alerts, made alerts uniform throughout app

--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="expanded == false" class="text-center text-light g2g-container-tight d-flex flex-column">
   <div class="justify-content-center m-3"> 
-    <div class="col">
+    <div>
       <h1 class="text-light">Sign Up</h1>
       <hr>
     </div>
