--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -32,9 +32,9 @@
 </div>
 
 <div *ngIf="(user === undefined) && isLoaded">
-  <div class="container text-light text-center">
-    <div class="row justify-content-center">
-      <div class="alert alert-info mt-3 col-5">You are not logged in.</div>
+  <div class="text-light text-center">
+    <div class="justify-content-center">
+      <div class="alert alert-info mt-3">You are not logged in.</div>
     </div>
   </div>
   <app-login></app-login>
