--- a/src/app/components/create-account/create-account.component.css
+++ b/src/app/components/create-account/create-account.component.css
@@ -1,4 +1,5 @@
-.col-centered{
-    float: none;
-    margin: 0 auto;
+.alert {
+  width: max-content;
+  margin-left: auto;
+  margin-right: auto;
 }
