--- a/src/app/components/playstyle/playstyle.component.html
+++ b/src/app/components/playstyle/playstyle.component.html
@@ -21,10 +21,10 @@
 </div>
 
 <div *ngIf="(user === undefined) && isLoaded">
-    <div class="container text-light text-center">
-      <div class="row justify-content-center">
-        <div class="alert alert-info mt-3 col-5">You are not logged in.</div>
-      </div>
+  <div class="text-light text-center">
+    <div class="justify-content-center">
+      <div class="alert alert-info mt-3">You are not logged in.</div>
     </div>
-    <app-login></app-login>
   </div>
+  <app-login></app-login>
+</div>
