converted to mobile friendly

--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -51,11 +51,10 @@
 </div>
 
 
-<div *ngIf="expanded == true" class="justify-content-center text-light g2g-container-tight d-flex flex-column">
-  <div class="col-md-4 col-centered">
-    <div class="">
-      <h2 class="text-light" style="text-align:center">You have successfully created an account!</h2>
-    </div>
+<div *ngIf="expanded == true" class="justify-content-center text-light d-flex flex-column mt-5">
+  <div class="g2g-container-tight">
+    <h2 class="text-light text-center">You have successfully created an account!</h2>
+    
 
     <a routerLink="/login">
       <div class="justify-content-center p-4">
