--- a/src/app/components/join-room/join-room.component.html
+++ b/src/app/components/join-room/join-room.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="user" class="container text-center text-light">
-  <div class="row justify-content-center mt-3">
-    <div class="col">
+<div *ngIf="user" class="d-flex flex-column text-center text-light">
+  <div class="justify-content-center mt-3">
+    <div>
       <h1>Joining Room...</h1>
       <hr>
     </div>
