added Cognito label to button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
       </li>
       <li *ngIf="user">
         <a href="https://g2g.auth.us-east-2.amazoncognito.com/logout?client_id=1td66m0ar4lbkbntg1csdbsob8&logout_uri=https://g2g.revatureprojects.com/home">
-          <button (click)="logout()" class="btn btn-outline-light text-light mx-2"><div>Logout</div></button>
+          <button (click)="logout()" class="btn btn-outline-light text-light mx-2"><div>Cognito Logout</div></button>
         </a>
       </li>
       <ng-template #login>
