added michael to footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
   </div>
   
   <footer>
-    <div class="text-light text-center bg-dark">Designed by Kayla Filio, Philip Lawrence, and Nancy Yuan.</div>
+    <div class="text-light text-center bg-dark">Designed by Kayla Filio, Michael Kochis, Philip Lawrence, and Nancy Yuan.</div>
   </footer>
   
 </div>
