--- a/src/app/components/create-room/create-room.component.css
+++ b/src/app/components/create-room/create-room.component.css
@@ -3,11 +3,15 @@ div .game-options-select{
   text-align: unset;
 }
 
+#room-button{
+  margin-bottom: 15px;
+}
+
 @media screen and (max-width: 770px){
-  #searchTable {
+  /* #searchTable {
     display: none;
     visibility: hidden;
-  }
+  } */
   #form {
     margin: unset;
   }
@@ -38,6 +42,18 @@ div .game-options-select{
 
 .input-group fa-icon {
   position: relative;
+}
+
+.input-group {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.table{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 caption {
