changed header name

--- a/src/app/components/about-dev/about-dev.component.html
+++ b/src/app/components/about-dev/about-dev.component.html
@@ -2,7 +2,7 @@
 
     <div class="justify-content-center row mt-3">
         <div>
-          <h1>About the Developers</h1>
+          <h1>Developers</h1>
           <hr>
         </div>
     </div>
