incorporated Angular Materials Modal

--- a/src/app/components/about-dev/about-dev.component.html
+++ b/src/app/components/about-dev/about-dev.component.html
@@ -23,13 +23,13 @@
                         <p>John.Doe@email.com</p>
                         <div class="icons">
                             <span class = "icon">
-                                <fa-icon [icon]="faLinkedin"></fa-icon>
+                              <a href="https://www.google.com/"><fa-icon [icon]="faLinkedin"></fa-icon></a>
                             </span>
                             <span class = "icon">
-                                <fa-icon [icon]="faGithubSquare"></fa-icon>
+                              <a href="https://www.google.com/"><fa-icon [icon]="faGithubSquare"></fa-icon></a>
                             </span>
                             <span class = "icon">
-                                <fa-icon [icon]="faEllipsisH"></fa-icon>
+                              <a href="javascript:void(0);" role="button" (click)="openDialog()"><fa-icon [icon]="faEllipsisH"></fa-icon></a>
                             </span>
                         </div>
                     </div>
@@ -37,5 +37,6 @@
             </div>
         </div>
     </div>
+
 
 </div>
