--- a/src/styles.css
+++ b/src/styles.css
@@ -9251,3 +9251,5 @@ a.text-tertiary:hover, a.text-tertiary:focus {
   }
 }
 /*# sourceMappingURL=styles.css.map */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
